--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 
     <div class="selectBox" ng-controller="mainCtrl as mCtrl">
 
-          <!-- <form name="searchForm" novalidate
-          ng-submit="npCtrl.search()">
-              <div>
-                  <input name="place" type="text" ng-model="searchPlace" required autofocus />
-                  <span >
-                      <button ng-disabled="searchForm.$invalid">Search</button>
-                  </span>
-              </div>
-          </form> -->
+    <form name="searchForm" novalidate
+    ng-submit="mCtrl.search()">
+        <div>
+            <input name="place" type="text" ng-model="mCtrl.searchPlace" required autofocus />
+            {{searchPlace}}
+            <span >
+                <button ng-disabled="searchForm.$invalid">Search</button>
+            </span>
+        </div>
+    </form>
 
           <div id="map"></div>
           <div id="instruction"></div>
