--- a/index.html
+++ b/index.html
@@ -3,48 +3,52 @@
   <head>
     <meta charset="utf-8">
     <title>Ecotricity Angular1 App</title>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="angularApp.js"></script>
   </head>
   <body >
-    <h1 id="instruction">Electric Highway Finder</h1>
+    <div id="container">
+  			<div class="brandDiv">
+  				<img class="logo" src="library/images/ecotricity-logo-large.jpg" alt="Ecotricity Logo" />
+  				<img class="strapline" src="library/images/britain-s-leading-green-energy-supplier.jpg" alt="Ecotricity Logo" />
+  			</div>
+      <div ng-controller="mainCtrl as mCtrl">
 
+        <div id="map"></div>
+        <div class="menuBox">
+          <h2>Electric Highway Finder</h2>
+          <div id="instruction"></div>
 
-    <div class="selectBox" ng-controller="mainCtrl as mCtrl">
+          <label for="cars">1. Please select your electric car: </label>
+          <select ng-model="selectedCar" ng-options="car as car.vehicleMake +' '+car.vehicleModel + ' '+car.vehicleSpec for car in mCtrl.listOfCars" class="selectBox" ng-change="mCtrl.select_car(selectedCar)"></select>
+          <h3>Your car: {{selectedCar.vehicleMake +' '+selectedCar.vehicleModel + ' '+selectedCar.vehicleSpec}}</h3>
+          <p>2. Where do you want to start from?</p>
+          <button class="btn" ng-click="mCtrl.findMyLocation()">Where I am now</button>
+           OR <form name="searchForm" novalidate
+          ng-submit="mCtrl.search()">
 
-      <div id="map"></div>
-      <div id="instruction"></div>
+                Type in your location:
+                  <input name="place" type="text" ng-model="mCtrl.searchPlace" required autofocus />
+                  {{searchPlace}}
+                  <span >
+                      <button class="btn" ng-disabled="searchForm.$invalid"> > </button>
+                  </span>
+              </div>
+          </form>
+          <p>3. Find Charging Stations Near You</p>
+          <button class="btn" ng-click="mCtrl.findStations()">Find</button>
+          <div id="direction-panel" class="animated slideInUp"></div>
 
-      <label for="cars">1. Please select your electric car: </label>
-      <select ng-model="selectedCar" ng-options="car as car.vehicleMake +' '+car.vehicleModel + ' '+car.vehicleSpec for car in mCtrl.listOfCars" class="selectBox" ng-change="mCtrl.select_car(selectedCar)"></select>
-      <h3>Your car: {{selectedCar.vehicleMake +' '+selectedCar.vehicleModel + ' '+selectedCar.vehicleSpec}}</h3>
-      <br />
-      <p>2. Where do you want to start from?
-      <br />
-      <button ng-click="mCtrl.findMyLocation()">Find your location</button>
-      <form name="searchForm" novalidate
-      ng-submit="mCtrl.search()">
-          <div>
-            Or<br />
-            Type in your location:
-              <input name="place" type="text" ng-model="mCtrl.searchPlace" required autofocus />
-              {{searchPlace}}
-              <span >
-                  <button ng-disabled="searchForm.$invalid"> > </button>
-              </span>
-          </div>
-      </form>
-      <p>3. Find Charging Stations Near You</p>
-      <button ng-click="mCtrl.findStations()">Find</button>
-      <div id="direction-panel" class="animated slideInUp"></div>
-
-      <ul>
-        <li ng-repeat="item in mCtrl.list">
-          Name: {{item.name}} - Location: {{item.location}}
-        </li>
-      </ul>
+        </div>
+        <ul>
+          <li ng-repeat="item in mCtrl.list">
+            Name: {{item.name}} - Location: {{item.location}}
+          </li>
+        </ul>
+      </div>
     </div>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiIT-vZnJLlI1faDYfWa-9N-vyZ4JL4Vg&libraries=places"></script>
 
