now all functions implemented. Need to check against the android app to make sure.  No user authentication yet

--- a/directory-brand.html
+++ b/directory-brand.html
@@ -1,4 +1,5 @@
 <div id="brand" class="brandDiv">
-  <img ng-class="logo" src="library/images/ecotricity-logo-large.jpg" alt="Ecotricity Logo" />
-  <img ng-class="strapline" src="library/images/britain-s-leading-green-energy-supplier.jpg" alt="Ecotricity Logo" />
+  <img ng-class="logo" src="library/images/ecotricity-logo-largeTransparent.png" alt="Ecotricity Logo" />
+  <span class="strapline">Britain's leading green energy supplier</span>
+  <!-- <img ng-class="strapline" src="library/images/britain-s-leading-green-energy-supplier.jpg" alt="Ecotricity Logo" /> -->
 </div>
